// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderView /> and children Should render 1`] = `
<Adapter>
  <ul
    className="tabsMenu"
  >
    <Connect(Tab)
      active={true}
      flag={true}
      hendlerTab={[Function]}
      itemKey="mainModule"
      key="mainModule"
      sizeTab={160}
    />
  </ul>
  <div
    className="headerControllers"
  >
    <Updater
      additionalClassName="updaterDefault"
      onClick={[Function]}
    />
    <div
      className="logout"
      onClick={[Function]}
    >
      Выйти
    </div>
  </div>
</Adapter>
`;

exports[`<HeaderView /> and children Should render 2`] = `
<Adapter>
  <ul
    className="tabsMenu"
  >
    <Connect(Tab)
      active={true}
      flag={true}
      hendlerTab={[Function]}
      itemKey="mainModule"
      key="mainModule"
      sizeTab={160}
    />
  </ul>
  <div
    className="headerControllers"
  >
    <Updater
      additionalClassName="updaterDefault"
      onClick={[Function]}
    />
    <div
      className="logout"
      onClick={[Function]}
    >
      Выйти
    </div>
  </div>
</Adapter>
`;

exports[`<HeaderView /> and children Should render 3`] = `
<Adapter>
  <ul
    className="tabsMenu"
  >
    <Connect(Tab)
      active={false}
      flag={true}
      hendlerTab={[Function]}
      itemKey="mainModule1"
      key="mainModule1"
      sizeTab={160}
    />
  </ul>
  <div
    className="headerControllers"
  >
    <Updater
      additionalClassName="updaterDefault"
      onClick={[Function]}
    />
    <div
      className="logout"
      onClick={[Function]}
    >
      Выйти
    </div>
  </div>
</Adapter>
`;
